samples/_failures_safe/1761553199_9aabae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_674939e8.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_674939e8.c:174:12: error: missing terminating " character
  174 |     printf("0: START, 1: DATA, 2: PROCESS
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_674939e8.c:174:5: error: expected expression at end of input
  174 |     printf("0: START, 1: DATA, 2: PROCESS
      |     ^~~~~~
./samples/SAFE/__tmp_674939e8.c:174:5: error: expected declaration or statement at end of input
